[package]
version = "0.1.0"
edition = "2021"
name = "xr_android"
[lib]
crate-type = ["cdylib"]
build_targets = ["aarch64-linux-android"]
#resources = "assets/android-res"
#runtime_libs = "libs"

[features]
#default = ["linked"]

[dependencies]
anyhow = "1.0.75"
bevy = { git = "https://github.com/awtterpip/bevy", branch = "android" }
#openxr = { version = "0.17.1", features = ["mint", "loaded"] }
mint = "0.5.9"
color-eyre = "0.6.2"
bevy_openxr = { path = "../bevy_openxr2"}

[patch.crates-io]
android-activity = { git = "https://github.com/rust-mobile/android-activity", rev = "79e03e08fbf70e374cb88d8ef8c89acaa006bbfc" }


[package.metadata.android]
runtime_libs = "./common_lib"
fullscreen = true
#package = "org.bevyengine.example"
#apk_name = "bevyexample"
#assets = "assets"
#res = "assets/android-res"
#icon = "@mipmap/ic_launcher"
#label = "Bevy Example"
#build_targets = ["aarch64-linux-android"]

[package.metadata.android.sdk]
min_sdk_version = 32
target_sdk_version = 32

[package.metadata.android.application]
debuggable = true
label = "XR Test"
theme = "@android:style/Theme.DeviceDefault.NoActionBar.Fullscreen"

[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"

[[package.metadata.android.uses_permission]]
name = "android.permission.access_network_state"

[[package.metadata.android.application.meta_data]]
name = "com.oculus.supportedDevices"
value = "quest|quest2"

[[package.metadata.android.application.meta_data]]
name = "com.oculus.intent.category.VR"
value = "vr_only"

[[package.metadata.android.application.activity.intent_filter]]
actions = ["android.intent.action.MAIN"]
categories = ["com.oculus.intent.category.VR", "android.intent.category.LAUNCHER"]

[[package.metadata.android.application.activity.meta_data]]
name = "com.oculus.vr.focusaware"
value = "true"

[[package.metadata.android.uses_feature]]
name = "android.hardware.vulkan.level"
required = true
version = 0x00010001

[[package.metadata.android.uses_feature]]
name = "android.hardware.vr.headtracking"
required = true
version = 1

[[package.metadata.android.uses_feature]]
name = "oculus.software.handtracking"
required = true
version = 1

[[package.metadata.android.uses_permission]]
name = "com.oculus.permission.HAND_TRACKING"
required = true
version = 1


#[[package.metadata.android.application.meta_data]]
#name = "com.samsung.android.vr.application.mode"
#value = "vr_only"
#[[package.metadata.android.application.meta_data]]
#name = "com.oculus.supportedDevices"
#value = "quest|quest2"
#
#[package.metadata.android.application.activity]
#theme = "@android:style/Theme.Black.NoTitleBar.Fullscreen"
#config_changes = "density|keyboard|keyboardHidden|navigation|orientation|screenLayout|screenSize|uiMode"
#launch_mode = "singleTask"
#orientation = "landscape"
#resizeable_activity = false
#
#[[package.metadata.android.application.activity.intent_filter]]
#actions = ["android.intent.action.MAIN"]
#categories = [
#    "com.oculus.intent.category.VR",
#    "android.intent.category.LAUNCHER",
#    "android.intent.category.INFO",
#]

[package.metadata.android.signing.release]
path = "./hotham_examples.keystore"
keystore_password = "chomsky-vigilant-spa"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
#debug = true